<resources>
    <string name="app_name">SmartShower</string>
    <string name="add_preset">add preset</string>
    <string name="recommended">Recommended</string>
    <string name="user_presets">My presets</string>
    <string name="hi_sam">Good morning Sam</string>
    <string name="view_stats">view usage statistics</string>
    <string name="increase_temp">Increase temperature</string>
    <string name="decrease_temp">Decrease temperature</string>
    <string name="water_flow">water flow</string>
    <string name="start_shower">start shower</string>
    <string name="stop_shower">Stop shower</string>
    <string name="edit_preset">edit preset</string>
    <string name="stats_average_duration">Average shower duration</string>
    <string name="stats_average_temperature">Average shower temperature</string>
    <string name="stats_number_showers_monthly">Number of showers this month</string>
    <string name="account_dropdown_my_profile">My profile</string>
    <string name="account_dropdown_logout">Logout</string>
    <string name="account_dropdown_contact">Contact us</string>
    <string name="account_dropdown_settings">Settings</string>
    <string name="my_account_button">My account button</string>
    <string name="manage_presets">Manage presets</string>
    <string name="plus_sign">+</string>
    <string name="addpreset_createnewpreset">Create a new preset</string>
    <string name="addpreset_name">Preset name</string>
    <string name="addpreset_settings">Shower settings</string>
    <string name="addpreset_temperature">Temperature (C°)</string>
    <string name="addpreset_flowrate">Water flow (%)</string>
    <string name="addpreset_theme">Select theme</string>
    <string name="addpreset_bool_timer">Enable shower timer</string>
    <string name="addpreset_bool_templimit">Enable safe temperature limit</string>
    <string name="discard_changes">discard changes</string>
    <string name="create_preset">Create preset</string>
    <string name="addpreset_templimit">Safe temperature limit (C°)</string>
    <string name="addpreset_timer">Duration limit</string>
    <string name="statistics_header">Statistics</string>
    <string name="settings_header">Settings</string>
    <string name="myprofile_header">My profile</string>
    <string name="contact_us_header">Contact us</string>
    <string name="contact_us_send">Send message</string>
    <string name="my_statistics">My statistics</string>
    <string name="greeting_good_morning">Good morning %s</string>
    <string name="greeting_good_afternoon">Good afternoon %s</string>
    <string name="greeting_good_evening">Good evening %s</string>
    <string name="defaulttext_preset_timelimit">Unlimited duration</string>
    <string name="statistics_labels_monthly_temp">Monthly average shower temperatures</string>
    <string name="statistics_labels_monthly_duration">Monthly average shower duration</string>
    <string name="welcome_login">sign in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_signup">create an account</string>
    <string name="signup_username">Username</string>
    <string name="signup_email">Email address</string>
    <string name="signup_password">Create a new password</string>
    <string name="login_password">Password</string>
    <string name="email">Email</string>
    <string name="signup">sign up</string>
    <string name="accounts_file">com.example.sharedpreferences.Accounts</string>
    <string name="keys_account_id">accountId</string>
    <string name="keys_account_username">accountUsername</string>
    <string name="keys_account_password">accountPassword</string>
    <string name="view_history">view shower history</string>
    <string name="save_changes">save changes</string>
    <string name="no_presets">You have no presets yet. Click the add preset button to create one.</string>
</resources>
