<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="12dp" >


    <!-- MAIN PART -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header"/>

        <TextView
            android:id="@+id/tv_header_showers_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_number_showers_monthly"
            android:textSize="@dimen/heading3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_showers_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/tv_header_average_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_average_temperature"
            android:textSize="@dimen/heading3"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_average_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/tv_header_average_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_average_duration"
            android:textSize="@dimen/heading3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_average_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />
    </LinearLayout>

</RelativeLayout>