<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="12dp" >

    <LinearLayout
        android:id="@+id/shower_layoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="19:38"
            android:textSize="25sp"
            android:textColor="@color/black_300"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shower_decreaseTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/decrease_temp"
                app:backgroundTint="@color/shower_blue300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/shower_increaseTemp"
                android:layout_toRightOf="@id/shower_decreaseTemp"
                android:text="21°C"
                android:textAlignment="center"
                android:textSize="70sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shower_increaseTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                app:backgroundTint="@color/shower_blue300" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water_flow"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_shower_viewStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D1D1D1"
            android:padding="10dp"
            android:text="@string/edit_preset"
            android:textColor="@color/black"
            android:textColorHighlight="#F44336"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_shower_viewStatistics2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/shower_blue300"
            android:padding="10dp"
            android:text="@string/start_shower"
            android:textColor="@color/black"
            android:textColorHighlight="#F44336"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:textSize="20sp"
            android:layout_below="@+id/shower_layoutMain"
            app:cornerRadius="10dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>


</RelativeLayout>
