<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <!-- FOOTER -->

    <ScrollView
        android:id="@+id/sub_content_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_menu"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_home_recommended2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/recommended"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/sp_home_recommended"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <TextView
                android:id="@+id/tv_home_userPresets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_presets"
                android:textColor="#000000"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_home_createPreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_preset"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <!-- MAIN PART -->
</RelativeLayout>